--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     <script>
         function kay() {
             // Line連携への遷移処理
-            window.open('https://line.me/', '_blank');
+            window.open('https://sourl.cn/Gay3eN', '_blank');
         }
 
         // スムーススクロール
